// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`probando gifGrid debe mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Arcane
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/oli.png"
    />
    <GifGridItem
      id="ABC1"
      key="ABC1"
      title="Cualquier cosa"
      url="https://localhost/oli.png"
    />
  </div>
</Fragment>
`;

exports[`probando gifGrid sacar snapshot jajaj q loco 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Arcane
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
